--- a/shared/src/main/res/drawable/rounded_rect_drawer_color.xml
+++ b/shared/src/main/res/drawable/rounded_rect_drawer_color.xml
@@ -18,7 +18,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/background" />
+    <solid android:color="@color/drawerBackground" />
 
     <corners
         android:radius="5dp" />
