add a base quick share activity and prepare it in a few integration points

--- a/shared/src/main/res/xml/shortcuts.xml
+++ b/shared/src/main/res/xml/shortcuts.xml
@@ -15,6 +15,11 @@
             android:action="android.intent.action.VIEW"
             android:targetClass="xyz.klinker.messenger.activity.compose.ComposeActivity" />
 
+        <!--<intent-->
+            <!--android:targetPackage="xyz.klinker.messenger"-->
+            <!--android:action="android.intent.action.VIEW"-->
+            <!--android:targetClass="xyz.klinker.messenger.activity.share.QuickShareActivity" />-->
+
         <categories android:name="android.shortcut.conversation" />
 
     </shortcut>
