--- a/shared/src/main/res/layout/page_quick_share.xml
+++ b/shared/src/main/res/layout/page_quick_share.xml
@@ -38,6 +38,7 @@
             android:background="@null"
             android:gravity="start"
             android:hint="@string/enter_contact_name"
+            android:imeOptions="flagNoExtractUi"
             android:textColor="@android:color/white"
             android:textColorHint="@color/toolbarEditTextHint" />
 
@@ -47,15 +48,17 @@
         android:id="@+id/message_entry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:textSize="15sp"
-        android:hint="@string/type_message"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="24dp"
         android:background="@android:color/transparent"
         android:gravity="start"
+        android:hint="@string/type_message"
+        android:imeOptions="flagNoExtractUi"
+        android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
         android:lines="4"
         android:textColor="@color/primaryText"
-        android:textColorHint="@color/secondaryText" />
+        android:textColorHint="@color/secondaryText"
+        android:textSize="15sp" />
 
 </LinearLayout>
