--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="2.6.2"
         description="November 10th, 2017">
         <text>Bug fixes for deleting conversations</text>
+        <text>Bug fixes around blacklists</text>
     </version>
 
     <version
