changes around the dual sim functionality and what is displayed on the icon badge when it is set to the default

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -21,6 +21,7 @@
         description="November 10th, 2017">
         <text>Bug fixes for deleting conversations</text>
         <text>Bug fixes around blacklists</text>
+        <text>Android Wear bug fixes</text>
     </version>
 
     <version
