handle share intents from the new quick share dialog

--- a/shared/src/main/res/layout/page_quick_share.xml
+++ b/shared/src/main/res/layout/page_quick_share.xml
@@ -66,6 +66,7 @@
     <ImageView
         android:id="@+id/attached_image"
         android:layout_width="match_parent"
+        android:layout_marginTop="12dp"
         android:layout_height="200dp"
         android:visibility="gone" />
 
