fix the launcher shortcut integration and comment out the shortcut and share intents until this is released

--- a/shared/src/main/res/xml/shortcuts.xml
+++ b/shared/src/main/res/xml/shortcuts.xml
@@ -17,7 +17,7 @@
 
         <!--<intent-->
             <!--android:targetPackage="xyz.klinker.messenger"-->
-            <!--android:action="android.intent.action.VIEW"-->
+            <!--android:action="android.intent.action.SEND"-->
             <!--android:targetClass="xyz.klinker.messenger.activity.share.QuickShareActivity" />-->
 
         <categories android:name="android.shortcut.conversation" />
