redo the advanced features section:
- add category for quick compose
- add preference to quick compose category for selecting the favorite users
- rearrange the items
- move the 'internal browser' preference to this category
- make sure the 'internal browser' pref is synced between devices

--- a/shared/src/main/res/xml/settings_global.xml
+++ b/shared/src/main/res/xml/settings_global.xml
@@ -22,7 +22,7 @@
 
     <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
         android:key="@string/pref_customization_category"
-        android:title="@string/theme_settings">
+        android:title="@string/theme_settings_category">
 
         <Preference
             android:key="@string/pref_theme_settings"
@@ -93,12 +93,6 @@
             android:key="@string/pref_giffgaff"
             android:title="@string/giffgaff_delivery"
             android:defaultValue="false" />
-
-
-        <SwitchPreference
-            android:key="@string/pref_internal_browser"
-            android:title="@string/use_internal_browser"
-            android:defaultValue="true" />
 
         <SwitchPreference
             android:key="@string/pref_strip_unicode"
