--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -94,15 +94,17 @@
     <string name="pref_wake_screen" translatable="false">wake_screen</string>
     <string name="pref_heads_up" translatable="false">heads_up</string>
     <string name="pref_strip_unicode" translatable="false">strip_unicode</string>
-    <string name="pref_internal_browser" translatable="false">internal_browser</string>
     <string name="pref_history_in_notifications" translatable="false">history_in_notifications</string>
     <string name="pref_giffgaff" translatable="false">giffgaff_delivery</string>
     <string name="pref_notification_actions" translatable="false">notification_actions</string>
     <string name="pref_emoji_style" translatable="false">emoji_style</string>
     <string name="pref_phone_number" translatable="false">phone_number</string>
 
-    <string name="pref_secure_private_conversations" translatable="false">secure_private_conversations</string>
+    <string name="pref_quick_compose_category" translatable="false">quick_compose_category</string>
     <string name="pref_quick_compose" translatable="false">quick_compose</string>
+    <string name="pref_quick_compose_favorites">quick_compose_favorites</string>
+    <string name="pref_secure_private_conversations" translatable="false">secure_private_conversations</string>
+    <string name="pref_internal_browser" translatable="false">internal_browser</string>
     <string name="pref_delayed_sending" translatable="false">delayed_sending</string>
     <string name="pref_cleanup_messages" translatable="false">cleanup_old_messages</string>
     <string name="pref_signature" translatable="false">signature</string>
