--- a/shared/src/main/res/xml/settings_features.xml
+++ b/shared/src/main/res/xml/settings_features.xml
@@ -1,35 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <xyz.klinker.messenger.view.AutoSummaryListPreference
-        android:key="@string/pref_delayed_sending"
-        android:title="@string/delayed_sending"
-        android:entries="@array/delayed_sending"
-        android:entryValues="@array/delayed_sending_values"
-        android:defaultValue="off" />
-
-    <xyz.klinker.messenger.view.AutoSummaryListPreference
-        android:key="@string/pref_cleanup_messages"
-        android:title="@string/cleanup_old_messages"
-        android:entries="@array/cleanup"
-        android:entryValues="@array/cleanup_values"
-        android:defaultValue="never" />
-
-    <SwitchPreference
-        android:key="@string/pref_secure_private_conversations"
-        android:title="@string/secure_private_conversations"
-        android:summary="@string/secure_private_conversations_summary"
-        android:defaultValue="false" />
-
-    <SwitchPreference
-        android:key="@string/pref_quick_compose"
-        android:title="@string/quick_compose"
-        android:summary="@string/quick_compose_summary"
-        android:defaultValue="false" />
 
     <Preference
         android:key="@string/pref_signature"
-        android:title="@string/signature"
-        android:summary="@string/signature_summary" />
+        android:summary="@string/signature_summary"
+        android:title="@string/signature" />
+
+    <xyz.klinker.messenger.view.AutoSummaryListPreference
+        android:defaultValue="off"
+        android:entries="@array/delayed_sending"
+        android:entryValues="@array/delayed_sending_values"
+        android:key="@string/pref_delayed_sending"
+        android:title="@string/delayed_sending" />
+
+    <xyz.klinker.messenger.view.AutoSummaryListPreference
+        android:defaultValue="never"
+        android:entries="@array/cleanup"
+        android:entryValues="@array/cleanup_values"
+        android:key="@string/pref_cleanup_messages"
+        android:title="@string/cleanup_old_messages" />
+
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="@string/pref_secure_private_conversations"
+        android:summary="@string/secure_private_conversations_summary"
+        android:title="@string/secure_private_conversations" />
+
+    <SwitchPreference
+        android:key="@string/pref_internal_browser"
+        android:title="@string/use_internal_browser"
+        android:summary="@string/internal_browser_summary"
+        android:defaultValue="true" />
+
+    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
+        android:key="@string/pref_quick_compose_category"
+        android:title="@string/quick_compose">
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="@string/pref_quick_compose"
+            android:summary="@string/quick_compose_notification_summary" />
+
+        <Preference
+            android:dependency="@string/pref_quick_compose"
+            android:key="@string/pref_quick_compose_favorites"
+            android:summary="@string/quick_compose_favorites_summary"
+            android:title="@string/quick_compose_favorites" />
+
+    </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
 
 </PreferenceScreen>
