--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -37,9 +37,11 @@
     <string name="pref_about_privacy_policy" translatable="false">privacy_policy</string>
     <string name="pref_about_beta" translatable="false">beta</string>
 
+    <string name="pref_help_troubleshooting_category" translatable="false">troubleshooting</string>
     <string name="pref_help_issues" translatable="false">issue_tracker</string>
     <string name="pref_help_faqs" translatable="false">faqs</string>
     <string name="pref_help_features" translatable="false">features</string>
+    <string name="pref_help_battery_optimization" translatable="false">battery_optimization</string>
     <string name="pref_help_google_plus" translatable="false">google+</string>
     <string name="pref_help_email" translatable="false">email</string>
     <string name="pref_help_twitter" translatable="false">twitter</string>
