--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -88,6 +88,7 @@
                 android:layout_marginEnd="48dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
+                android:background="@drawable/rounded_rect"
                 android:contentDescription="@string/attached_image"
                 android:scaleType="centerCrop" />
 
@@ -96,37 +97,70 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="48dp">
 
-                <ImageView
+                <FrameLayout
                     android:id="@+id/remove_image"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_marginEnd="12dp"
-                    android:background="@color/colorPrimary"
                     android:contentDescription="@string/remove_image"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:src="@drawable/ic_close" />
+                    android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
-                <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/remove_image_background"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="2dp"
+                        android:src="@drawable/ic_close" />
+
+                </FrameLayout>
+
+                <FrameLayout
                     android:id="@+id/edit_image"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_gravity="bottom"
                     android:layout_marginEnd="12dp"
-                    android:background="@color/colorPrimary"
                     android:contentDescription="@string/edit_image"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:padding="3dp"
-                    android:src="@drawable/ic_edit" />
+                    android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
-                <TextView
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/edit_image_background"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="4dp"
+                        android:src="@drawable/ic_edit" />
+
+                </FrameLayout>
+
+                <FrameLayout
                     android:id="@+id/selected_images"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:background="@color/colorPrimary"
-                    android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp"
-                    android:visibility="gone" />
+                    android:layout_marginEnd="12dp"
+                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
+                    android:visibility="gone">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/selected_images_background"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                    <TextView
+                        android:id="@+id/selected_images_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="15sp" />
+
+                </FrameLayout>
 
             </LinearLayout>
 
