--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -31,6 +31,13 @@
     <!--</version>-->
 
     <version
+        name="2.6.3"
+        description="November 15th, 2017">
+        <text>Bug fixes around launcher badges</text>
+        <text>Various bug fixes</text>
+    </version>
+
+    <version
         name="2.6.2"
         description="November 10th, 2017">
         <text>Bug fixes for deleting conversations</text>
