add a checkbox pref to the three dot overflow menu on the compose screen for selecting whether or not to use group mms

--- a/shared/src/main/res/menu/activity_compose.xml
+++ b/shared/src/main/res/menu/activity_compose.xml
@@ -7,4 +7,11 @@
         android:title="@string/menu_mobile_only"
         android:checkable="true"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_group_mms"
+        android:title="@string/use_group_mms"
+        android:checkable="true"
+        app:showAsAction="never" />
+
 </menu>
