--- a/shared/src/main/res/layout/bottom_sheet_edit_scheduled_message.xml
+++ b/shared/src/main/res/layout/bottom_sheet_edit_scheduled_message.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:maxLines="7"
         android:textColor="@color/primaryText"/>
 
     <TextView
