--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -35,6 +35,7 @@
         description="December 4th, 2017">
         <text>Fixes for scheduled messages</text>
         <text>Crash fixes</text>
+        <text>Update translations</text>
     </version>
 
     <version
