update the release description

--- a/shared/src/main/res/xml/shortcuts.xml
+++ b/shared/src/main/res/xml/shortcuts.xml
@@ -13,7 +13,7 @@
         <intent
             android:targetPackage="xyz.klinker.messenger"
             android:action="android.intent.action.VIEW"
-            android:targetClass="xyz.klinker.messenger.activity.share.QuickShareActivity" />
+            android:targetClass="xyz.klinker.messenger.activity.compose.ComposeActivity" />
 
         <categories android:name="android.shortcut.conversation" />
 
