--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -25,6 +25,7 @@
         <text>Use the same new sharing-style for direct share on Android 6.0 and above</text>
         <text>Use the quick compose layout when composing messages from the Android 7.0+ quick settings tile</text>
         <text>Improvements for Essential phone</text>
+        <text>Improvements for downloading images to a new phone</text>
         <text>UI improvements</text>
         <text>MMS changes</text>
         <text>Bug fixes</text>
