--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -23,6 +23,7 @@
     <string name="pref_my_account_setup" translatable="false">my_account_setup</string>
     <string name="pref_delete_account" translatable="false">delete_account</string>
     <string name="pref_resync_account" translatable="false">resync_account</string>
+    <string name="pref_resync_contacts" translatable="false">resync_contacts</string>
     <string name="pref_refresh_firebase" translatable="false">refresh_firebase</string>
     <string name="pref_enable_danger_zone" translatable="false">enable_danger_zone</string>
 
