--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -26,6 +26,7 @@
         <text>Use the quick compose layout when composing messages from the Android 7.0+ quick settings tile</text>
         <text>Improvements for Essential phone</text>
         <text>Improvements for downloading images to a new phone</text>
+        <text>Two minute repeat interval</text>
         <text>UI improvements</text>
         <text>MMS changes</text>
         <text>Bug fixes</text>
