--- a/shared/src/main/res/xml/bottom_bar_compose.xml
+++ b/shared/src/main/res/xml/bottom_bar_compose.xml
@@ -11,4 +11,9 @@
         icon="@drawable/ic_group"
         title="@string/compose_groups" />
 
+    <tab
+        id="@+id/tab_all_contacts"
+        icon="@drawable/ic_person"
+        title="@string/compose_all_contacts" />
+
 </tabs>
