--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -16,6 +16,12 @@
 
 <changelog>
 
+    <!--<version-->
+        <!--name="2.8.0"-->
+        <!--description="December 12th, 2017">-->
+        <!--<text>Select from a list of all contacts on the compose screen (TODO: uncomment on bottom_bar_compose and ComposeContactsProvider)</text>-->
+    <!--</version>-->
+
     <version
         name="2.7.0"
         description="December 12th, 2017">
