refactor how messages are received so that I can use both the service and the receiver

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -25,7 +25,9 @@
     <version
         name="2.7.1"
         description="December 14th, 2017">
+        <text>UI updates</text>
         <text>Bug/crash fixes</text>
+        <text>Preparation for new features</text>
     </version>
 
     <version
