--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         <!--name="2.8.0"-->
         <!--description="December 12th, 2017">-->
         <!--<text>Select from a list of all contacts on the compose screen (TODO: uncomment on bottom_bar_compose and ComposeContactsProvider)</text>-->
+        <!--<text>Added the ability to mute a conversation, from it's notification (TODO: uncomment mute title on arrays.xml)</text>-->
     <!--</version>-->
 
     <version
